# htslib

./: Makefile.am  configure.ac
lib/: Makefile.am
m4/: gnulib-cache.m4
test/: Makefile.am
